2009-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* inotify.py, folder.py, base.py, photoliststore.py: Added support
	  for inotify in the Folder plugin.  Update recents queue with inotify.

2009-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* fspot.py: Added a rate weight option.  Added advanced options.
	* base.py, gphotoframe.glade: Adjust UI.
	* base.py, folder.py, gphotoframe.glade: Added subfolders settings
	  for Folder plguin.
	* photoliststore.py: Regard False as data in gconf.
	* config.py: Added bool type in get_value and set_value.

2009-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, fspot.py, preferences.py, gphotoframe.glade: Added rate
	  settings for F-Spot plguin.

2009-06-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, preferences.py, base.py, fspot.py:
	  Started implementation for advanced plugin options.

2009-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py: Added support for getting original phtos.
	* photoframe.py, photoliststore.py, gphotoframe.glade:
	  Added support for Recent Photos (issue #14).

2009-06-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added a key board accelerator for full screen mode.
	  Hide the mouse cursor in full screen mode.

2009-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added UI for full screen mode.

2009-06-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Improved the implementation of full screen mode.

2009-06-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added support for full screen mode.

2009-06-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py (Photo.open): Escape "'" characters in url.  Fixed issue #20.

2009-06-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.3.1 release.

2009-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Added support for "media content" elements.