@@ -1,5 +1,7 @@
 2009-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* photoframe.py, photoliststore.py: Update Popup menu when an
+	  opend image file is deleted (issue #16).
 	* inotify.py, folder.py, base.py, photoliststore.py: Added support
 	  for inotify in the Folder plugin.  Update recents queue with inotify.
 
